--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -16,12 +16,20 @@
         <tr>
             <th scope="col">Product Name</th>
             <th scope="col">Quantity</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="product: ${products}">
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
+            <td>
+                <a role="button" class="btn btn-secondary">Edit</a>
+            </td>
+            <td>
+                <a th:href="@{/product/{id}(id=${product.productId})}" class="btn btn-danger" role="button" onclick="return confirm('Are you sure you want to delete this product?');">Delete</a>
+            </td>
         </tr>
         </tbody>
     </table>
