--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -25,7 +25,7 @@
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
             <td>
-                <a role="button" class="btn btn-secondary">Edit</a>
+                <a th:href="@{/product/edit/{id}(id=${product.productId})}" role="button" class="btn btn-secondary">Edit</a>
             </td>
             <td>
                 <a th:href="@{/product/{id}(id=${product.productId})}" class="btn btn-danger" role="button" onclick="return confirm('Are you sure you want to delete this product?');">Delete</a>
