--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -9,7 +9,7 @@
 
 <div class="container my-2">
     <h2>Product' List</h2>
-    <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
+    <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3" id="create-product">Create Product</a>
 
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
