--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -8,6 +8,7 @@
 <body>
     <div  style="margin-top: 20px" class="container">
         <h3 style="text-align: center">Welcome to Fathonidf's Eshop</h3>
+        <h2 style="text-align: center">Please choose</h3>
         <div class="text-center" style="margin-top: 10px">
             <a style="align-items: center" href="/product/list" class="btn btn-primary">Lihat Produk</a>
             <a style="align-items: center" href="/car/listCar" class="btn btn-primary">Lihat Car</a>
